// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with no props 1`] = `
.c0 {
  color: #070707;
  font-size: 12px;
  font-weight: 200;
  width: 100%;
  height: 16px;
  margin: 5px 0;
  padding: 0;
  visibility: hidden;
}

<div
  className="c0"
  color="#070707"
/>
`;

exports[`renders correctly with show and type="alert-danger" props 1`] = `
.c0 {
  color: #DC0A0A;
  font-size: 12px;
  font-weight: 200;
  width: 100%;
  height: 16px;
  margin: 5px 0;
  padding: 0;
  visibility: visible;
}

<div
  className="c0"
  color="#DC0A0A"
  type="alert-danger"
>
  error message
</div>
`;

exports[`renders correctly with show and type="alert-success" props 1`] = `
.c0 {
  color: #2F6450;
  font-size: 12px;
  font-weight: 200;
  width: 100%;
  height: 16px;
  margin: 5px 0;
  padding: 0;
  visibility: visible;
}

<div
  className="c0"
  color="#2F6450"
  type="alert-success"
>
  error message
</div>
`;

exports[`renders correctly with show and type="hint" props 1`] = `
.c0 {
  color: #5A288F;
  font-size: 12px;
  font-weight: 200;
  width: 100%;
  height: 16px;
  margin: 5px 0;
  padding: 0;
  visibility: visible;
}

<div
  className="c0"
  color="#5A288F"
  type="hint"
>
  error message
</div>
`;

exports[`renders correctly with show prop 1`] = `
.c0 {
  color: #070707;
  font-size: 12px;
  font-weight: 200;
  width: 100%;
  height: 16px;
  margin: 5px 0;
  padding: 0;
  visibility: visible;
}

<div
  className="c0"
  color="#070707"
>
  message
</div>
`;
